--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,12 @@
     "support": {
     },
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=5.6.0",
         "composer/installers": "~1.0",
         "timber/timber": "1.2.4"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^2.8"
     },
     "autoload": {
         "classmap": [
@@ -47,11 +50,13 @@
             "framework/helpers/Utility.php",
             "framework/traits/StringHelpers.php"
         ],
-        "files": [
-            "framework/shortcodes/elr-shortcodes.php"
-        ],
         "psr-4": {
             "Theme\\": "elr-portfolio/"
         }
+    },
+    "scripts": {
+        "test": [
+            "phpcs"
+        ]
     }
 }
