--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ cache:
 
 before_install:
   - composer self-update
+  - gem install scss-lint
   - source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION && nvm use $TRAVIS_NODE_VERSION
   - export PATH=$HOME/.yarn/bin:$PATH && travis_retry curl -o- -L https://yarnpkg.com/install.sh | bash
 
