--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "elr/elr-portfolio",
     "type": "wordpress-theme",
     "license": "MIT",
-    "description": "wordpress starter theme using Twig and Timber",
+    "description": "WordPress theme for portfolio and resumè sites",
     "homepage": "http://www.elizabeth-rogers.com",
     "authors": [
     {
@@ -28,30 +28,8 @@
         "squizlabs/php_codesniffer": "^2.8"
     },
     "autoload": {
-        "classmap": [
-            "framework/customposts/CptBuilder.php",
-            "framework/customposts/Cpt.php",
-            "framework/customposts/CptForms.php",
-            "framework/customposts/CptMeta.php",
-            "framework/customposts/CustomTaxonomyBuilder.php",
-            "framework/customfields/CustomFields.php",
-            "framework/themeoptions/Forms.php",
-            "framework/themeoptions/Menu.php",
-            "framework/themeoptions/Options.php",
-            "framework/themeoptions/Subpages.php",
-            "framework/themeoptions/ThemeOptions.php",
-            "framework/helpers/Admin.php",
-            "framework/helpers/Date.php",
-            "framework/helpers/Loop.php",
-            "framework/helpers/Query.php",
-            "framework/helpers/Security.php",
-            "framework/helpers/Setup.php",
-            "framework/helpers/Taxonomy.php",
-            "framework/helpers/Utility.php",
-            "framework/traits/StringHelpers.php"
-        ],
         "psr-4": {
-            "Theme\\": "elr-portfolio/"
+            "Elr\\elr-portfolio\\": "framework/"
         }
     },
     "scripts": {
