--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "wordpress-boilerplate-twig",
-  "version": "1.3.0",
+  "name": "elr-portfolio",
+  "version": "1.4.0",
   "description": "WordPress starter theme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Beth3346/wordpress-boilerplate-twig.git"
+    "url": "https://github.com/Beth3346/portfolio.git"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.14.0",
