--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
         "timber/timber": "1.2.4"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^2.8",
-        "phpunit/phpunit": "^6.0"
+        "squizlabs/php_codesniffer": "^2.8"
     },
     "autoload": {
         "psr-4": {
