--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
-    "jshint": "^2.9.3"
+    "imagemin-jpegtran": "^5.0.2",
+    "jshint": "^2.9.3",
+    "node-sass": "^4.5.2"
   },
   "dependencies": {
     "elr-sass-utilities": "^3.1.0"
