fix framwork file structure

--- a/composer.json
+++ b/composer.json
@@ -29,26 +29,26 @@
     },
     "autoload": {
         "classmap": [
-            "src/customposts/CptBuilder.php",
-            "src/customposts/Cpt.php",
-            "src/customposts/CptForms.php",
-            "src/customposts/CptMeta.php",
-            "src/customposts/CustomTaxonomyBuilder.php",
-            "src/customfields/CustomFields.php",
-            "src/themeoptions/Forms.php",
-            "src/themeoptions/Menu.php",
-            "src/themeoptions/Options.php",
-            "src/themeoptions/Subpages.php",
-            "src/themeoptions/ThemeOptions.php",
-            "src/helpers/Admin.php",
-            "src/helpers/Date.php",
-            "src/helpers/Loop.php",
-            "src/helpers/Query.php",
-            "src/helpers/Security.php",
-            "src/helpers/Setup.php",
-            "src/helpers/Taxonomy.php",
-            "src/helpers/Utility.php",
-            "src/traits/StringHelpers.php"
+            "framework/customposts/CptBuilder.php",
+            "framework/customposts/Cpt.php",
+            "framework/customposts/CptForms.php",
+            "framework/customposts/CptMeta.php",
+            "framework/customposts/CustomTaxonomyBuilder.php",
+            "framework/customfields/CustomFields.php",
+            "framework/themeoptions/Forms.php",
+            "framework/themeoptions/Menu.php",
+            "framework/themeoptions/Options.php",
+            "framework/themeoptions/Subpages.php",
+            "framework/themeoptions/ThemeOptions.php",
+            "framework/helpers/Admin.php",
+            "framework/helpers/Date.php",
+            "framework/helpers/Loop.php",
+            "framework/helpers/Query.php",
+            "framework/helpers/Security.php",
+            "framework/helpers/Setup.php",
+            "framework/helpers/Taxonomy.php",
+            "framework/helpers/Utility.php",
+            "framework/traits/StringHelpers.php"
         ]
     },
     "scripts": {
