--- a/composer.json
+++ b/composer.json
@@ -23,12 +23,12 @@
         "php": ">=5.6.0",
         "composer/installers": "~1.0",
         "timber/timber": "1.2.4",
-        "elr/wpadmin": "^0.1.0",
-        "elr/wpsetup": "^0.0.1",
-        "elr/wpsecurity": "^0.0.1",
-        "elr/wpcustomposts": "^0.0.2",
-        "elr/wpthemeoptions": "^0.0.1",
-        "elr/wpshortcodes": "^0.0.2"
+        "elr/wpadmin": "*",
+        "elr/wpsetup": "*",
+        "elr/wpsecurity": "*",
+        "elr/wpcustomposts": "*",
+        "elr/wpthemeoptions": "*",
+        "elr/wpshortcodes": "*"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^2.8"
