--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
     "description": "WordPress theme for portfolio and resumè sites",
     "homepage": "http://www.elizabeth-rogers.com",
     "authors": [
-    {
-        "name": "Elizabeth Rogers",
-        "email": "beth@elizabeth-rogers.com",
-        "homepage": "https://github.com/Beth3346"
-    }
+        {
+            "name": "Elizabeth Rogers",
+            "email": "beth3346@gmail.com",
+            "homepage": "https://github.com/Beth3346"
+        }
     ],
     "keywords": [
         "wordpress",
